# fashion-brand-trend-analytics

./: Makefile  README.md  pyproject.toml
data/sample/: inventory_receipts.csv  order_items.csv  orders.csv  products.csv
docs/: dataset_publishing.md
scripts/: build_full_dataset.sh
sql/: 01_macros.sql  02_staging.sql  03_marts.sql
src/fashion_trends/: cli.py  db.py  settings.py
src/fashion_trends/analytics/: backtest.py  trend_index.py
src/fashion_trends/pipelines/: compute_indices.py  export_tableau.py  generate_data.py  ingest.py  run_sql.py
tableau/: dashboard_spec.md  data_dictionary.md  tableau_calculated_fields.md
tests/: test_demo_smoke.py  test_trend_index.py
