[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-trend-brand-analytics"
version = "0.1.0"
description = "Brand-level fashion trend analysis (synthetic data, DuckDB, SQL, Tableau extracts)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Wenli Xie (portfolio project scaffold)"}]
dependencies = [
  "duckdb>=0.10.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
fashion-trends = "fashion_trends.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
